// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Introspector relation with inline relation column 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int! @unique
  product_id: Product
}

type Product @pgTable(name: \\"product\\") {
  bill: Bill
  description: String!
  id: Int! @unique
}"
`;

exports[`Introspector relation with inline relation column NOT NULL 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int! @unique
  product_id: Product!
}

type Product @pgTable(name: \\"product\\") {
  bill: Bill!
  description: String!
  id: Int! @unique
}"
`;

exports[`Introspector relation with relation table 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  id: Int! @unique
  product: [Product!]!
}

type Product @pgTable(name: \\"product\\") {
  bill: [Bill!]!
  id: Int! @unique
  product: String!
}"
`;

exports[`Introspector relation with relation table with extra column 1`] = `
"type Bill @pgTable(name: \\"bill\\") {
  bill: String!
  bill_product: Bill_product
  id: Int! @unique
}

type Bill_product @pgTable(name: \\"bill_product\\") {
  bill_id: Bill
  product_id: Product
  some_other_column: String!
}

type Product @pgTable(name: \\"product\\") {
  bill_product: Bill_product
  id: Int! @unique
  product: String!
}"
`;
